--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,13 @@ find_package(Threads REQUIRED)
 if (BUILD_EXAMPLES)
     add_subdirectory(examples/cpp)
 #     target_link_libraries(example_master_arm PRIVATE Threads::Threads)
-    target_link_libraries(example_teleoperation_with_joint_mapping PRIVATE Threads::Threads)
+        foreach(target IN ITEMS
+        example_teleoperation_big_aloha
+        example_teleoperation_big
+        example_teleoperation_exo
+    )
+        target_link_libraries(${target} PRIVATE Threads::Threads)
+    endforeach()
 endif ()
 
 ############################################################
